# Projet_Galaxerb

./: .gitignore  Calcul_data.py  Makefile  README.md  test.py
Language-naif/cpp-naif-cli/: makefile  resultats.txt
Language-naif/cpp-naif-cli/src/: Galaxy.hpp  main.cpp
Language-naif/java-naif-cli/: makefile  resultats.txt  resultatsJit.txt
Language-naif/java-naif-cli/src/: FileTools.java  Main.java  RenderNaive.java
Language-naif/julia-naif-cli/: Makefile  resultats.txt
Language-naif/julia-naif-cli/src/: main.jl
Language-naif/octave-naif-cli/: Makefile  make.m  resultats.txt
Language-naif/octave-naif-cli/src/: Galaxy.m  RenderNaive.m  load_from_file.m  main.m
Language-naif/python-naif-cli/: makefile  resultats.txt
Language-naif/python-naif-cli/src/: main.py
Language-naif/rust-naif-cli/: Cargo.toml  makefile  resultats.txt
Language-naif/rust-naif-cli/src/: file_tools.rs  galaxy.rs  main.rs  (+1 more)
Language-opti/cpp-opti/: RenderOptim2.cpp  RenderOptim2.hpp  RenderOptim3.cpp  RenderOptim3.hpp  makefile
Résultats/: Trace_Courbes.py  resultats.txt
cpp-naif-cli/: CMakeLists.txt  makefile  resultats.txt
cpp-naif-cli/src/: FileTools.hpp  RenderNaive.hpp  main.cpp
java_naif_cli/: makefile  resultats.txt  resultatsJit.txt
java_naif_cli/src/: FileTools.java  Galaxy.java  Main.java  RenderNaive.java
julia-naif-cli/: Makefile  main.jl
julia-naif-cli/src/: FileTools.jl  Project.toml  RenderNaiveGen.jl  main.jl
octave-naif-cli/: main.m
python-naif-cli/: makefile  resultats.txt
python-naif-cli/src/: FileTools.py  RenderNaive.py  main.py
(+3 files in other folders)
